force-app/main/default/objects/Dashboard_detail__mdt/Dashboard_detail__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type used to store the dashboard ids for lightning and classic</description>
    <label>Dashboard detail</label>
    <pluralLabel>Dashboard details</pluralLabel>
</CustomObject>