force-app/main/default/objects/Dashboard_detail__mdt/fields/Classic_ID__c.field-meta.xml
<CustomField>
    <fullName>Classic_ID__c</fullName>
    <description>Stores the id of the dashboard to be displayed for Classic UI</description>
    <label>Classic Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>