force-app/main/default/objects/Dashboard_detail__mdt/fields/Display_name__c.field-meta.xml
<CustomField>
    <fullName>Display_name__c</fullName>
    <description>Name of the dashboard as it is displayed on the VF page</description>
    <label>Display name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>