force-app/main/default/objects/Dashboard_detail__mdt/fields/Lightning_ID__c.field-meta.xml
<CustomField>
    <fullName>Lightning_ID__c</fullName>
    <description>ID of the dashboard to be used for lightning UI</description>
    <label>Lightning Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>